--- a/compile.js.html
+++ b/compile.js.html
@@ -1,4 +1,11 @@
-import fs from 'fs'
+
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" href="/styles/style.css">
+</head> 
+<body>
+	<pre>import fs from 'fs'
 import markdownIt from "./markdown-it/markdown-it.js";
 import { iframescript } from "./iframify.js"
 
@@ -46,7 +53,7 @@ function eat(tree) {
 				let children =  eat(tree);
 				children = Array.isArray(children) ? children.join("") : children;
 				let done = false
-				for (let i = 0; i < beforeElementHooks.length; i++) {
+				for (let i = 0; i &lt; beforeElementHooks.length; i++) {
 					if (done) continue
 					if (beforeElementHooks[i].condition(item, children)) {
 						let el = beforeElementHooks[i].element(item, children)
@@ -55,7 +62,7 @@ function eat(tree) {
 					}
 				}
 
-				if (!done) ret.push(`<${item.tag}${at_string ? " " + at_string : ''}> ${children} </${item.tag}>`);
+				if (!done) ret.push(`&lt;${item.tag}${at_string ? " " + at_string : ''}> ${children} &lt;/${item.tag}>`);
 
 			}
 		}
@@ -63,7 +70,7 @@ function eat(tree) {
 		if (item.nesting === 0) {
 			if (!item.children || item.children.length === 0) {
 				let p = item.type === "softbreak"
-					? "<br></br>"
+					? "&lt;br>&lt;/br>"
 					: item.type === "fence"
 						? codeblock(item)
 						: item.content;
@@ -86,7 +93,7 @@ setHookFor("pages/wrapping_2025.md", {
 	},
 	element: (item, child) => {
 		let removed = child.replace("insert: ", "")
-		return `<${item.tag} class='insert'> ${removed} </${item.tag}>`
+		return `&lt;${item.tag} class='insert'> ${removed} &lt;/${item.tag}>`
 	}
 })
 
@@ -96,7 +103,7 @@ setHookFor("pages/wrapping_2025.md", {
 	},
 	element: (item, child) => {
 		let removed = child.replace("date: ", "")
-		return `<${item.tag} class='date'> ${removed} </${item.tag}>`
+		return `&lt;${item.tag} class='date'> ${removed} &lt;/${item.tag}>`
 	}
 })
 
@@ -106,20 +113,20 @@ setHookFor("pages/wrapping_2025.md", {
 		else false
 	},
 	element: (item, child) => `
-<${item.tag} class='feed-link' ${attrsToString(attrs(item))}>
- <span>FEED:</span> ${child}
-</${item.tag}>`
+&lt;${item.tag} class='feed-link' ${attrsToString(attrs(item))}>
+ &lt;span>FEED:&lt;/span> ${child}
+&lt;/${item.tag}>`
 })
 
 
 let codeblock = (item) => {
-	if (item.info == 'js-run') return `<div class='two-col codeblock'>
-		<textarea>${item.content}</textarea>
-		<iframe srcdoc='${iframescript(item.content)}'></iframe>
-		<button>run</button>
-	</div>`
+	if (item.info == 'js-run') return `&lt;div class='two-col codeblock'>
+		&lt;textarea>${item.content}&lt;/textarea>
+		&lt;iframe srcdoc='${iframescript(item.content)}'>&lt;/iframe>
+		&lt;button>run&lt;/button>
+	&lt;/div>`
 
-	else return `<pre>${item.content}</pre>`
+	else return `&lt;pre>${item.content}&lt;/pre>`
 }
 
 let safe_parse = (content) => {
@@ -158,15 +165,15 @@ const MD =  (content) => {
 };
 
 let html = body => `
-<!DOCTYPE html>
-<html>
-<head>
-	<link rel="stylesheet" href="/styles/style.css">
-</head> 
-<body>
+&lt;!DOCTYPE html>
+&lt;html>
+&lt;head>
+	&lt;link rel="stylesheet" href="/styles/style.css">
+&lt;/head> 
+&lt;body>
 	${body}
-</body>
-<script type='module' src='script.js'></script>
+&lt;/body>
+&lt;script type='module' src='script.js'>&lt;/script>
 `
 let transform =  (path) => {
 	let file = fs.readFileSync("./" + path, { encoding: 'utf-8' })
@@ -179,7 +186,7 @@ let transform =  (path) => {
 
 let transformjs =  (path) => {
 	let file = fs.readFileSync("./" + path, { encoding: 'utf-8' })
-	let content = `<pre>${file.replaceAll("<", "&lt;")}</pre>`;
+	let content = `&lt;pre>${file.replaceAll("&lt;", "&lt;")}&lt;/pre>`;
 	let split = path.split('.')
 	let htmlpath = split.join(".") + '.html'
 	fs.writeFileSync(htmlpath, html(content))
@@ -203,3 +210,6 @@ files.forEach(path => {
 
 	console.log(path)
 })
+</pre>
+</body>
+<script type='module' src='script.js'></script>
