--- a/pages/wrapping_2025.html
+++ b/pages/wrapping_2025.html
@@ -5,13 +5,15 @@
 	<link rel="stylesheet" href="/styles/style.css">
 </head> 
 <body>
-	<h3> January 2025 </h3>
+	<h1> Reflecting, Recaping and Wrapping up 2025 </h1>
+<p class='insert'> A lot happened in 2025 and I made a lot of small, medium / large things. As this year is coming to a close, I wanted to take a step back and reflect on the things I made, where these things came from and where do they go next. </p>
+<h3> January 2025 </h3>
 <div class='repo'>
 
 <p class='date'> Jan 11 </p>
 <p> <a href = "https://github.com/caizoryan/editor"> caizoryan/editor JavaScript  </a> Began this year with starting the 
 <a class='feed-link' href = "https://feed.a-p.space/feed-editor-editor">
- <span>FEED:</span> editor-editor
+<span>(FEED)</span>&nbsp;editor-editor
 </a> project. This was the prelimnary repo. Later renamed it to editor-editor </p>
 </div>
 
@@ -41,7 +43,7 @@
 
 <p class='insert'> I have it somewhere in my drafts that I wanted to do a blog post about this invite website. This was the first time I did anything server related, where state is shared amongst multiple people. I also made the thing in 
 <a class='feed-link' href = "https://feed.a-p.space/feed-editor-editor">
- <span>FEED:</span> editor-editor
+<span>(FEED)</span>&nbsp;editor-editor
 </a> which was a big W. </p>
 <div class='repo'>
 
@@ -51,20 +53,14 @@
 
 <p class='insert'> This was the repo I did most of my work in till about March of 2025. I started this repo because I was really interested in a recursive/bootstappable editor where the editor can implement itself over time + you can make components for specific domains. For instance see 
 <a class='feed-link' href = "https://feed.a-p.space/blocks/33857682">
- <span>FEED:</span> this component
+<span>(FEED)</span>&nbsp;this component
 </a> that is a tile connections editor for a wave function collapse algorithm. Writing tiles directly to json is tedious, so this is essentially is a data editor. This was the idea behind the whole editor-editor. This issue ended up being that it felt very cumbersome to make changes. </p>
 <p class='insert'> Reflection: I think the main issue with this project was that I tried to make it an end all be all. This project stems from the work I did in 2023 when I implemented an editor for the first time. Back then I though the issue was I was trying to make my own programming language and make the editor for that. The scope for the editor was much smaller then because the language was constrained. But the experience of using the editor was janky at best and that's why that didn't go forward. So to tackle that I tried making this editor a fully inclusive JS editor, with an LSP server + canvas implementation, filesystem, module loading and what not. I think it failed there because managing all these different parts was a lot. </p>
 <h3> February 2025 </h3>
 <div class='repo'>
 
-<p class='date'> Feb 27 </p>
-<p> <a href = "https://github.com/caizoryan/jose-website"> caizoryan/jose-website JavaScript  </a> Made Jose's website for the price of 3 hummus </p>
-</div>
-
-<div class='repo'>
-
-<p class='date'> Feb 20 </p>
-<p> <a href = "https://github.com/caizoryan/codemirror-vim"> caizoryan/codemirror-vim JavaScript  </a><br></br>Forked Codemirror vim to add support for css scaling to work with cursor. This was my first ever contribution to an open source project and I'm super proud of it :) </p>
+<p class='date'> Feb 7 </p>
+<p> <a href = "https://github.com/caizoryan/hydra-local"> caizoryan/hydra-local JavaScript  </a> Running hydra in the browser, but writing the code in your own code editor. </p>
 </div>
 
 <div class='repo'>
@@ -75,30 +71,35 @@
 
 <div class='repo'>
 
-<p class='date'> Feb 7 </p>
-<p> <a href = "https://github.com/caizoryan/hydra-local"> caizoryan/hydra-local JavaScript  </a> Running hydra in the browser, but writing the code in your own code editor. </p>
+<p class='date'> Feb 20 </p>
+<p> <a href = "https://github.com/caizoryan/codemirror-vim"> caizoryan/codemirror-vim JavaScript  </a><br></br>Forked Codemirror vim to add support for css scaling to work with cursor. This was my first ever contribution to an open source project and I'm super proud of it :) </p>
+</div>
+
+<div class='repo'>
+
+<p class='date'> Feb 27 </p>
+<p> <a href = "https://github.com/caizoryan/jose-website"> caizoryan/jose-website JavaScript  </a> Made Jose's website for the price of 3 hummus </p>
 </div>
 
 <h3> March 2025 </h3>
 <div class='repo'>
 
-<p class='date'> Mar 31 </p>
-<p> <a href = "https://github.com/caizoryan/editor-anisha"> caizoryan/editor-anisha JavaScript  </a> Created an instance of editor to run anisha's game in it. </p>
+<p class='date'> Mar 10 </p>
+<p> <a href = "https://github.com/caizoryan/arena.js"> caizoryan/arena.js Javascript </a> Are.na Typed API but in JSDoc instead of typescript </p>
 </div>
 
 <div class='repo'>
 
-<p class='date'> Mar 29 </p>
-<p> <a href = "https://github.com/caizoryan/gradex-website"> caizoryan/gradex-website JavaScript  </a> Made the Gradex website with omama. </p>
+<p class='date'> Mar 10 </p>
+<p> <a href = "https://github.com/caizoryan/arena-js"> caizoryan/arena-js JavaScript  </a> </p>
 </div>
 
 <div class='repo'>
 
-<p class='date'> Mar 26 </p>
-<p> <a href = "https://github.com/caizoryan/editor-typesetter"> caizoryan/editor-typesetter JavaScript  </a> For final ISP project, made a publication program prototype that ended up being the large project later on in the year... and the thing I'm currenlty working on. </p>
+<p class='date'> Mar 13 </p>
+<p> <a href = "https://github.com/caizoryan/overhead-camera"> caizoryan/overhead-camera JavaScript  </a> </p>
 </div>
 
-<p class='insert'> I stopped working on editor after this point when I transitioned to my next project which is the <a href = ""> publication tool </a> sometime in Late March of 2025 when my final ISP presentation was due. To link the work I had been doing to graphic design I cooked up a typesetting/publication design tool which I've been developing since. </p>
 <div class='repo'>
 
 <p class='date'> Mar 14 </p>
@@ -113,24 +114,25 @@
 
 <div class='repo'>
 
-<p class='date'> Mar 13 </p>
-<p> <a href = "https://github.com/caizoryan/overhead-camera"> caizoryan/overhead-camera JavaScript  </a> </p>
+<p class='date'> Mar 26 </p>
+<p> <a href = "https://github.com/caizoryan/editor-typesetter"> caizoryan/editor-typesetter JavaScript  </a> For final ISP project, made a publication program prototype that ended up being the large project later on in the year... and the thing I'm currenlty working on. </p>
+</div>
+
+<p class='insert'> I stopped working on editor after this point when I transitioned to my next project which is the <a href = ""> publication tool </a> sometime in Late March of 2025 when my final ISP presentation was due. To link the work I had been doing to graphic design I cooked up a typesetting/publication design tool which I've been developing since. </p>
+<div class='repo'>
+
+<p class='date'> Mar 29 </p>
+<p> <a href = "https://github.com/caizoryan/gradex-website"> caizoryan/gradex-website JavaScript  </a> Made the Gradex website with omama. </p>
 </div>
 
 <div class='repo'>
 
-<p class='date'> Mar 10 </p>
-<p> <a href = "https://github.com/caizoryan/arena.js"> caizoryan/arena.js Javascript </a> Are.na Typed API but in JSDoc instead of typescript </p>
-</div>
-
-<div class='repo'>
-
-<p class='date'> Mar 10 </p>
-<p> <a href = "https://github.com/caizoryan/arena-js"> caizoryan/arena-js JavaScript  </a> </p>
+<p class='date'> Mar 31 </p>
+<p> <a href = "https://github.com/caizoryan/editor-anisha"> caizoryan/editor-anisha JavaScript  </a> Created an instance of editor to run anisha's game in it. </p>
 </div>
 
 <h3> April 2025 </h3>
-<p> April was a big month for doing other people's projects. </p>
+<p class='insert'> April was a big month for me because I got to work a lot with other people, either as a collaborator or help out with people's existing projects. </p>
 <div class='repo'>
 
 <p class='date'> Apr 27 </p>
