--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <p> Hey there person! I hope you're doing well :) </p>
 <p> Welcome to my blog. I don't have a lot of stuff here yet, rather there's just one post. This blog runs on the same engine that powers <a href = "https://research.if-m.works"> research.if-m </a>. </p>
 <p class='insert'> Here's my first blog post! (WIP)<br></br><a href = "./pages/wrapping_2025.html"> Reflecting, Recaping and Wrapping up 2025 </a> </p>
+<p> <img src="https://pketh.org/images/2025/human-tools/omw.webp" style='margin-top: 1em;width: 350px;'></img> </p>
 <h3> Here is a codeblock </h3>
 <p> Codeblocks are runnable :) play around! </p>
 <div class='two-col codeblock'>
