--- a/pages/wrapping_2025.html
+++ b/pages/wrapping_2025.html
@@ -7,6 +7,13 @@
 <body>
 	<h1> Reflecting, Recaping and Wrapping up 2025 </h1>
 <p class='insert'> A lot happened in 2025 and I made a lot of small, medium / large things. As this year is coming to a close, I wanted to take a step back and reflect on the things I made, where these things came from and where do they go next. </p>
+<p class='insert'> This post takes the form of an annotated git log ~~> </p>
+<div class='repo'>
+
+<p class='date'> Date </p>
+<p> <a href = ""> caizoryan/linktorepo Langauge </a> And the a short little not after that about what this repo was. </p>
+</div>
+
 <h3> January 2025 </h3>
 <div class='repo'>
 
@@ -51,10 +58,16 @@
 <p> <a href = "https://github.com/caizoryan/editor-editor"> caizoryan/editor-editor JavaScript  </a> </p>
 </div>
 
-<p class='insert'> This was the repo I did most of my work in till about March of 2025. I started this repo because I was really interested in a recursive/bootstappable editor where the editor can implement itself over time + you can make components for specific domains. For instance see 
-<a class='feed-link' href = "https://feed.a-p.space/blocks/33857682">
-<span>(FEED)</span>&nbsp;this component
-</a> that is a tile connections editor for a wave function collapse algorithm. Writing tiles directly to json is tedious, so this is essentially is a data editor. This was the idea behind the whole editor-editor. This issue ended up being that it felt very cumbersome to make changes. </p>
+<p class='insert'> This was the repo I did most of my work in till about March of 2025. I started this repo because I was really interested in a recursive/bootstappable editor where the editor can implement itself over time + you can make components for specific domains. For instance see this component: </p>
+<p> <div class='clip'>
+<p> Added edges to the wave function tile component for <a href = ""> buffalo </a> </p>
+<p> <video src=https://attachments.are.na/33857809/f33830525b98cbb414384f9e20f2d4ee.mp4?1737473417 controls loop></video>  </p>
+
+<a href='https://feed.a-p.space/blocks/33857682' target="_blank">
+Read More
+</a>
+</div> </p>
+<p class='insert'> that is a tile connections editor for a wave function collapse algorithm. Writing tiles directly to json is tedious, so this is essentially is a data editor. This was the idea behind the whole editor-editor. This issue ended up being that it felt very cumbersome to make changes. </p>
 <p class='insert'> Reflection: I think the main issue with this project was that I tried to make it an end all be all. This project stems from the work I did in 2023 when I implemented an editor for the first time. Back then I though the issue was I was trying to make my own programming language and make the editor for that. The scope for the editor was much smaller then because the language was constrained. But the experience of using the editor was janky at best and that's why that didn't go forward. So to tackle that I tried making this editor a fully inclusive JS editor, with an LSP server + canvas implementation, filesystem, module loading and what not. I think it failed there because managing all these different parts was a lot. </p>
 <h3> February 2025 </h3>
 <div class='repo'>
@@ -118,7 +131,26 @@
 <p> <a href = "https://github.com/caizoryan/editor-typesetter"> caizoryan/editor-typesetter JavaScript  </a> For final ISP project, made a publication program prototype that ended up being the large project later on in the year... and the thing I'm currenlty working on. </p>
 </div>
 
-<p class='insert'> I stopped working on editor after this point when I transitioned to my next project which is the <a href = ""> publication tool </a> sometime in Late March of 2025 when my final ISP presentation was due. To link the work I had been doing to graphic design I cooked up a typesetting/publication design tool which I've been developing since. </p>
+<p class='insert'> I stopped working on editor after this point when I transitioned to my next project which is the 
+<a class='feed-link' href = "https://feed.a-p.space/feed-publication-tool">
+<span>(FEED)</span>&nbsp;publication tool
+</a> sometime in Late March of 2025 when my final ISP presentation was due. To link the work I had been doing to graphic design I cooked up a typesetting/publication design tool which I've been developing since. </p>
+<p> <div class='clip'>
+<h1> Overflow working </h1>
+<p> <video src=https://attachments.are.na/35462595/4cda268f3e505774242f8cbb2edea6f5.mp4?1742781867 controls loop></video>  </p>
+
+<a href='https://feed.a-p.space/blocks/35462601' target="_blank">
+Read More
+</a>
+</div><br></br><div class='clip'>
+<h1> Working on a typesetting algorithm </h1>
+<p> Wondering if I could implement a paragraph styles, text overflow etc stuff and make a basic indesign clone... </p>
+<p> <video src=https://attachments.are.na/35440196/fb349e6c38e76bfcdc913a9d21ba7537.mp4?1742681746 controls loop></video>  </p>
+
+<a href='https://feed.a-p.space/blocks/35440203' target="_blank">
+Read More
+</a>
+</div> </p>
 <div class='repo'>
 
 <p class='date'> Mar 29 </p>
@@ -169,6 +201,14 @@
 <p> <a href = "https://github.com/caizoryan/symposium-website"> caizoryan/symposium-website JavaScript  </a> Created the Alt-skool symposium website. </p>
 </div>
 
+<p> <div class='clip'>
+<h1> Working on the Alt-practices Symposium website </h1>
+<p> <video src=https://attachments.are.na/35980223/dfb8c1765f06680f18c2d73671050906.mp4?1744642642 controls loop></video>  </p>
+
+<a href='https://feed.a-p.space/blocks/35980243' target="_blank">
+Read More
+</a>
+</div> </p>
 <div class='repo'>
 
 <p class='date'> Apr 2 </p>
