--- a/compile.js.html
+++ b/compile.js.html
@@ -8,34 +8,82 @@
 	<pre>import fs from 'fs'
 import markdownIt from "./markdown-it/markdown-it.js";
 import { iframescript } from "./iframify.js"
+import { convertRawRowOptionsToStandard } from 'console-table-printer/dist/src/utils/table-helpers.js';
 
+let host = "http://localhost:3000/api";
+let auth = ''
+let options = {
+	headers: {
+		Authorization: `Bearer ${auth}`,
+		cache: "no-store",
+		"Cache-Control": "max-age=0, no-cache",
+		referrerPolicy: "no-referrer",
+	},
+};
 let md = new markdownIt('commonmark')//.use(makrdownItMark);
 
+const image = (block) => `&lt;img src="${block.image.display.url}" />`;
+const media_embed = (block) =>
+	`&lt;span class="media">${block.embed?.html}&lt;/span>`;
+
+const media = (block) => `
+	&lt;a href=${block?.source?.url}>
+		&lt;div class="media">
+			&lt;p class="title">${block.title}&lt;/p>
+			&lt;img src="${block.image.display.url}" />
+			&lt;p class="metadata">${block.source?.url}&lt;/p> 
+		&lt;/div>
+	&lt;/a>
+`;
+
+const video = (block) =>
+	`&lt;video src=${block.attachment.url} controls loop>&lt;/video> `;
+const link = (block) =>
+	`&lt;span class="link"> &lt;a target="_blank" href=${block.source.url}>${block.title} ${link_svg}&lt;/a> &lt;/span>`;
+
+const pdf = (block) => `
+	&lt;a target="_blank" href=${block.attachment.url}>
+		&lt;p class="pdf">
+			&lt;span>
+			${block.title} ${link_svg}
+			&lt;/span>
+			&lt;img src="${block.image.display.url}" />
+		&lt;/p>
+	&lt;/a>
+`;
+
+const fetch_json = (link, options) =>
+	fetch(link, options).then((r) => r.json());
+const get_channel = (slug) => {
+	console.log("getting", slug)
+	return fetch_json(host + "/channels/" + slug, options)
+}
+const get_block = (id) => fetch_json(host + "/blocks/" + id, options);
 let attrs = (item) => {
 	let attrs = item.attrs;
 	if (!attrs) return {};
 	return Object.fromEntries(attrs);
 };
 
-let attrsToString = at => 
-				Object.entries(at)
-					.map(([key, value]) => `${key} = "${value}"`)
-					.join(" ");
+let attrsToString = at =>
+	Object.entries(at)
+		.map(([key, value]) => `${key} = "${value}"`)
+		.join(" ");
 
 let beforeElementHooks = []
 let hookMap = {}
 
-let setHookFor = (path, hook) =>{
+let setHookFor = (path, hook) => {
 	if (!Array.isArray(path)) path = [path]
 
 	path.forEach(path => {
 		hookMap[path]
 			? hookMap[path].push(hook)
 			: hookMap[path] = [hook]
-		})
+	})
 }
 
-function eat(tree) {
+async function eat(tree) {
 	let ret = [];
 	if (!tree) return "";
 	while (tree.length > 0) {
@@ -56,13 +104,14 @@ function eat(tree) {
 			let at_string = attrsToString(at)
 
 			if (!ignore) {
-				let children =  eat(tree);
+				let children = await eat(tree);
 				children = Array.isArray(children) ? children.join("") : children;
 				let done = false
 				for (let i = 0; i &lt; beforeElementHooks.length; i++) {
 					if (done) continue
-					if (beforeElementHooks[i].condition(item, children)) {
-						let el = beforeElementHooks[i].element(item, children)
+					let is = await beforeElementHooks[i].condition(item, children)
+					if (is) {
+						let el = await beforeElementHooks[i].element(item, children)
 						ret.push(el)
 						done = true
 					}
@@ -82,7 +131,7 @@ function eat(tree) {
 						: item.content;
 				ret.push(p);
 			} else {
-				let children =  eat(item.children);
+				let children = await eat(item.children);
 				children = Array.isArray(children) ? children.join("") : children;
 				ret.push(children);
 			}
@@ -93,12 +142,58 @@ function eat(tree) {
 	return ret;
 }
 
-setHookFor(['index.md',"pages/wrapping_2025.md",], {
+setHookFor(['index.md', "pages/wrapping_2025.md"], {
+	condition: (item, child) => {
+		return item.tag == 'a' &&
+			(attrs(item).href.includes('are.na/block')
+			 || attrs(item).href.includes('feed.a-p.space/blocks')
+			)
+	},
+	element: async (item, child) => {
+		let block = await get_block(attrs(item).href.split("/").pop().trim())
+		if (block.class == 'Image') return image(block)
+		// --------------------------------
+		// Attachment
+		// --------------------------------
+		if (block.class == "Attachment") {
+			if (block.attachment.extension == "mp4") {
+				return video(block);
+			} else if (block.attachment.extension == "pdf") {
+				return pdf(block);
+			}
+		}
+
+		// --------------------------------
+		// Media
+		// --------------------------------
+		else if (block.class == "Media") {
+			if (block.class == "Media" && block.embed) {
+				return media_embed(block);
+			}
+			else return media(block);
+
+		}
+		if (block.class == 'Text') {
+			let transformed = await transform(block.content)
+			if (child.trim().toLowerCase() == 'clip') return `&lt;div class='clip'>
+${transformed.slice(0,3).join("\n")}
+
+&lt;a href='https://feed.a-p.space/blocks/${block.id}' target="_blank">
+Read More
+&lt;/a>
+&lt;/div>`
+			// else return `&lt;div class='text block'>${transformed.join("\n")}&lt;/div>`
+		}
+		// let removed = child.replace("insert: ", "")
+	}
+})
+setHookFor(['index.md', "pages/wrapping_2025.md",], {
 	condition: (item, child) => {
 		return item.tag == 'p' && child.split(" ")[0] == 'insert:'
 	},
 	element: (item, child) => {
 		let removed = child.replace("insert: ", "")
+		console.log(removed)
 		return `&lt;${item.tag} class='insert'> ${removed} &lt;/${item.tag}>`
 	}
 })
@@ -114,7 +209,7 @@ setHookFor("pages/wrapping_2025.md", {
 })
 
 setHookFor("pages/wrapping_2025.md", {
-	condition: (item, child) =>{
+	condition: (item, child) => {
 		if (item.tag == 'a' && attrs(item).href?.includes('feed.a-p.space')) return true
 		else false
 	},
@@ -143,11 +238,11 @@ let safe_parse = (content) => {
 	}
 };
 
-const MD =  (content) => {
+const MD = async (content) => {
 	let tree, body;
 	tree = safe_parse(content);
 
-	if (tree) body =  eat(tree);
+	if (tree) body = await eat(tree);
 	else body = content;
 
 	return body;
@@ -164,16 +259,16 @@ let html = body => `
 &lt;/body>
 &lt;script type='module' src='script.js'>&lt;/script>
 `
-let transform =  (path) => {
+let transform = async content => MD(content)
+let transformmd = async (path) => {
 	let file = fs.readFileSync("./" + path, { encoding: 'utf-8' })
-	let content =  MD(file);
+	let content = await transform(file);
 	let split = path.split('.')
 	let ext = split.pop()
 	let htmlpath = split.join(".") + '.html'
 	fs.writeFileSync(htmlpath, html(content.join("\n")))
 }
-
-let transformjs =  (path) => {
+let transformjs = async (path) => {
 	let file = fs.readFileSync("./" + path, { encoding: 'utf-8' })
 	let content = `&lt;pre>${file.replaceAll("&lt;", "&lt;")}&lt;/pre>`;
 	let split = path.split('.')
@@ -182,23 +277,22 @@ let transformjs =  (path) => {
 }
 
 let files = fs.readdirSync('./', { recursive: true })
-files.forEach(path => {
-	if (path.includes('.git')) return
-	// emacs pain...
-	if (path.includes('#')) return
-	if (path.includes('markdown-it')) return
+for (const path of files) {
+	if (path.includes('.git')) continue
+	if (path.includes('#')) continue
+	if (path.includes('markdown-it')) continue
 
-	if (hookMap[path]){hookMap[path].forEach(e => beforeElementHooks.push(e))}
+	if (hookMap[path]) { hookMap[path].forEach(e => beforeElementHooks.push(e)) }
 
 	let split = path.split('.')
 	let ext = split.pop()
-	if (ext == 'md') transform(path)
-	if (ext == 'js') transformjs(path)
+	if (ext == 'md') await transformmd(path)
+	if (ext == 'js') await transformjs(path)
 
 	beforeElementHooks = []
 
 	console.log(path)
-})
+}
 </pre>
 </body>
 <script type='module' src='script.js'></script>
