--- a/pages/wrapping_2025.html
+++ b/pages/wrapping_2025.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="/styles/style.css">
+	<link rel='stylesheet' href='/styles/repo.css'>
 </head> 
 <body>
 	<h1> Reflecting, Recaping and Wrapping up 2025 </h1>
@@ -60,6 +61,7 @@
 
 <p class='insert'> This was the repo I did most of my work in till about March of 2025. I started this repo because I was really interested in a recursive/bootstappable editor where the editor can implement itself over time + you can make components for specific domains. For instance see this component: </p>
 <p> <div class='clip'>
+<a href='https://feed.a-p.space/' target="_blank">From [ FEED.A-P ]</a>
 <p> Added edges to the wave function tile component for <a href = ""> buffalo </a> </p>
 <p> <video src=https://attachments.are.na/33857809/f33830525b98cbb414384f9e20f2d4ee.mp4?1737473417 controls loop></video>  </p>
 
@@ -98,13 +100,7 @@ Read More
 <div class='repo'>
 
 <p class='date'> Mar 10 </p>
-<p> <a href = "https://github.com/caizoryan/arena.js"> caizoryan/arena.js Javascript </a> Are.na Typed API but in JSDoc instead of typescript </p>
-</div>
-
-<div class='repo'>
-
-<p class='date'> Mar 10 </p>
-<p> <a href = "https://github.com/caizoryan/arena-js"> caizoryan/arena-js JavaScript  </a> </p>
+<p> <a href = "https://github.com/caizoryan/arena-js"> caizoryan/arena-js JavaScript  </a> Are.na Typed API but in JSDoc instead of typescript </p>
 </div>
 
 <div class='repo'>
@@ -136,18 +132,20 @@ Read More
 <span>(FEED)</span>&nbsp;publication tool
 </a> sometime in Late March of 2025 when my final ISP presentation was due. To link the work I had been doing to graphic design I cooked up a typesetting/publication design tool which I've been developing since. </p>
 <p> <div class='clip'>
-<h1> Overflow working </h1>
-<p> <video src=https://attachments.are.na/35462595/4cda268f3e505774242f8cbb2edea6f5.mp4?1742781867 controls loop></video>  </p>
-
-<a href='https://feed.a-p.space/blocks/35462601' target="_blank">
-Read More
-</a>
-</div><br></br><div class='clip'>
+<a href='https://feed.a-p.space/' target="_blank">From [ FEED.A-P ]</a>
 <h1> Working on a typesetting algorithm </h1>
 <p> Wondering if I could implement a paragraph styles, text overflow etc stuff and make a basic indesign clone... </p>
 <p> <video src=https://attachments.are.na/35440196/fb349e6c38e76bfcdc913a9d21ba7537.mp4?1742681746 controls loop></video>  </p>
 
 <a href='https://feed.a-p.space/blocks/35440203' target="_blank">
+Read More
+</a>
+</div><br></br><div class='clip'>
+<a href='https://feed.a-p.space/' target="_blank">From [ FEED.A-P ]</a>
+<h1> Overflow working </h1>
+<p> <video src=https://attachments.are.na/35462595/4cda268f3e505774242f8cbb2edea6f5.mp4?1742781867 controls loop></video>  </p>
+
+<a href='https://feed.a-p.space/blocks/35462601' target="_blank">
 Read More
 </a>
 </div> </p>
@@ -183,6 +181,17 @@ Read More
 <p> <a href = "https://github.com/caizoryan/typesetter"> caizoryan/typesetter JavaScript  </a> Took the typesetting tool out of the editor-editor to be it's own independant thing. </p>
 </div>
 
+<p> <div class='clip'>
+<a href='https://feed.a-p.space/' target="_blank">From [ FEED.A-P ]</a>
+<h1> Grid {system} </h1>
+<p> I was supposed to make a series of these, to explain the grid-structure, hyphenation, drawing line, overflow, imposition, etc but its 1am and I'm only 3 pages into the first one :) </p>
+<p> I guess it's not gonna work out... </p>
+<p> <video src=https://attachments.are.na/36156591/a417f560491b56a44161232ed53c27a6.mp4?1745295851 controls loop></video>  </p>
+
+<a href='https://feed.a-p.space/blocks/36156603' target="_blank">
+Read More
+</a>
+</div> </p>
 <div class='repo'>
 
 <p class='date'> 16 Apr </p>
@@ -202,6 +211,7 @@ Read More
 </div>
 
 <p> <div class='clip'>
+<a href='https://feed.a-p.space/' target="_blank">From [ FEED.A-P ]</a>
 <h1> Working on the Alt-practices Symposium website </h1>
 <p> <video src=https://attachments.are.na/35980223/dfb8c1765f06680f18c2d73671050906.mp4?1744642642 controls loop></video>  </p>
 
@@ -218,20 +228,25 @@ Read More
 <h3> May 2025 </h3>
 <div class='repo'>
 
-<p class='date'> May 29 </p>
-<p> <a href = "https://github.com/caizoryan/notes"> caizoryan/notes HTML  </a> Created a repository to store my Notes. </p>
+<p class='date'> May 1 </p>
+<p> <a href = "https://github.com/caizoryan/omama-zaid"> caizoryan/omama-zaid JavaScript  </a> Made a website to host omama and zaid's collab project. Displayed at gradex. </p>
+</div>
+<div class='repo'>
+
+<p class='date'> May 4 </p>
+<p> <a href = "https://github.com/caizoryan/anisha-thesis-electron"> caizoryan/anisha-thesis-electron JavaScript  </a> Made an electron version for anisha's game because browser security is a pain. </p>
 </div>
 
 <div class='repo'>
 
-<p class='date'> May 28 </p>
-<p> <a href = "https://github.com/caizoryan/templater"> caizoryan/templater JavaScript  </a> Created a templating LANG to use JS inside a HTML template. </p>
+<p class='date'> May 6 </p>
+<p> <a href = "https://github.com/caizoryan/anisha-portfolio"> caizoryan/anisha-portfolio JavaScript  </a> Made a portfolio website for anisha. </p>
 </div>
 
 <div class='repo'>
 
-<p class='date'> May 27 </p>
-<p> <a href = "https://github.com/caizoryan/untitledstudio"> caizoryan/untitledstudio JavaScript  • Built by @caizoryan @pascal-is-waging </a> Created the repo for if-m website. Based on templater. </p>
+<p class='date'> May 16 </p>
+<p> <a href = "https://github.com/caizoryan/gamejam001"> caizoryan/gamejam001 GDScript  • Built by @caizoryan @aryamancodes @anisha-vatnani </a> Did a gamejam with Anisha and Aryaman! was super fun! </p>
 </div>
 
 <div class='repo'>
@@ -248,34 +263,28 @@ Read More
 
 <div class='repo'>
 
-<p class='date'> May 16 </p>
-<p> <a href = "https://github.com/caizoryan/gamejam001"> caizoryan/gamejam001 GDScript  • Built by @caizoryan @aryamancodes @anisha-vatnani </a> Did a gamejam with Anisha and Aryaman! was super fun! </p>
+<p class='date'> May 27 </p>
+<p> <a href = "https://github.com/caizoryan/untitledstudio"> caizoryan/untitledstudio JavaScript  • Built by @caizoryan @pascal-is-waging </a> Created the repo for if-m website. Based on templater. </p>
+</div>
+<div class='repo'>
+
+<p class='date'> May 28 </p>
+<p> <a href = "https://github.com/caizoryan/templater"> caizoryan/templater JavaScript  </a> Created a templating LANG to use JS inside a HTML template. </p>
 </div>
 
 <div class='repo'>
 
-<p class='date'> May 6 </p>
-<p> <a href = "https://github.com/caizoryan/anisha-portfolio"> caizoryan/anisha-portfolio JavaScript  </a> Made a portfolio website for anisha. </p>
-</div>
-
-<div class='repo'>
-
-<p class='date'> May 4 </p>
-<p> <a href = "https://github.com/caizoryan/anisha-thesis-electron"> caizoryan/anisha-thesis-electron JavaScript  </a> Made an electron version for anisha's game because browser security is a pain. </p>
-</div>
-
-<div class='repo'>
-
-<p class='date'> May 1 </p>
-<p> <a href = "https://github.com/caizoryan/omama-zaid"> caizoryan/omama-zaid JavaScript  </a> Made a website to host omama and zaid's collab project. Displayed at gradex. </p>
+<p class='date'> May 29 </p>
+<p> <a href = "https://github.com/caizoryan/notes"> caizoryan/notes HTML  </a> Created a repository to store my Notes. </p>
 </div>
 
 <h3> June 2025 </h3>
 <p> <a href = "https://github.com/NONE!%5D"> NONE! </a> </p>
+<p class='insert'> Travelled to Vancouver and Victoria and then back home to India. Rested, enjoyed the summer and breathed. </p>
 <h3> July 2025 </h3>
 <div class='repo'>
+date: Lisp Jun
 
-<p class='date'> Lisp Jun </p>
 <p> <a href = "https://github.com/caizoryan/emacs-config"> caizoryan/emacs-config Emacs  9 </a> Moved to EMACS! </p>
 </div>
 
