--- a/readme.html
+++ b/readme.html
@@ -69,3 +69,4 @@ console.log("Dawg")
 <p> <a href = "https://p5js.org/tutorials/repeating-with-loops/"> p5.js </a> </p>
 <p> Live edit and run. I like when there's specific examples that you can edit and re-run. I think you learn best when you see what happens when you change values. Also distinguishes runnable vs not runnable code by not having a play button. Runnable code runs by default, it can be rerun once you change stuff. </p>
 </body>
+<script type='module' src='/script.js'></script>
