finally finished the recap thingie

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1> BLOG </h1>
 <p> Hey there person! I hope you're doing well :) </p>
 <p> Welcome to my blog. I don't have a lot of stuff here yet, rather there's just one post. This blog runs on the same engine that powers <a href = "https://research.if-m.works"> research.if-m </a>. </p>
-<p class='insert'> Here's my first blog post! (WIP)<br></br><a href = "./pages/wrapping_2025.html"> CLIP: Reflecting, Recaping and Wrapping up 2025 </a> </p>
+<p class='insert'> Here's my first blog post! (WIP)<br></br><a href = "./pages/wrapping_2025.html"> Reflecting, Recaping and Wrapping up 2025 </a> </p>
 <p> <a href = "https://github.com/caizoryan/editor"> caizoryan/editor JavaScript  </a> Began this year with starting the 
 <a class='feed-link' href = "https://feed.a-p.space/feed-editor-editor">
 <span>(FEED)</span>&nbsp;editor-editor
