--- a/script.js.html
+++ b/script.js.html
@@ -12,11 +12,12 @@ document.querySelectorAll(".codeblock")
 	.forEach(e => {
 		let [code, iframe, button] = e.children
 		console.log("code: ", code.value)
-		console.log("btn: ", button) // 
+		console.log("btn: ", button)
 		button.onclick = () => {
 			iframe.srcdoc = iframescript(code.value)
 		}
 	})
+
 </pre>
 </body>
 <script type='module' src='/script.js'></script>
