--- a/compile.js.html
+++ b/compile.js.html
@@ -8,11 +8,13 @@
 <body>
 	<pre>import fs from 'fs'
 import markdownIt from "./markdown-it/markdown-it.js";
+import markdownItMark from "./markdown-it/markdown-it-mark.js";
+import { footnote_plugin } from "./markdown-it/markdown-it-footnote.js"
 import { iframescript } from "./iframify.js"
-import {minimatch} from "minimatch"
+import { minimatch } from "minimatch"
 import arena from './extensions/arena.js';
 
-let md = new markdownIt('commonmark')//.use(makrdownItMark);
+let md = new markdownIt('commonmark').use(footnote_plugin).use(markdownItMark);
 
 export let attrs = (item) => {
 	let attrs = item.attrs;
@@ -48,6 +50,8 @@ async function eat(tree) {
 	while (tree.length > 0) {
 		let item = tree.shift();
 		if (item.nesting === 1) {
+			// console.log(item.type)
+			if (item.type.includes('foot')) console.log("BROOOO", item)
 			let at = attrs(item);
 			let ignore = false;
 
@@ -77,17 +81,23 @@ async function eat(tree) {
 				}
 
 				if (!done) ret.push(`&lt;${item.tag}${at_string ? " " + at_string : ''}> ${children} &lt;/${item.tag}>`);
-
 			}
 		}
 
 		if (item.nesting === 0) {
+			// console.log(item.type)
+			if (item.type?.includes('foot')) console.log("BROOOOSEE", item)
+			// if (item.content && !item.children && item.content.includes('^')) console.log(item)
 			if (!item.children || item.children.length === 0) {
-				let p = item.type === "softbreak"
-					? "&lt;br>&lt;/br>"
-					: item.type === "fence"
-						? codeblock(item)
-						: item.content;
+				let p
+				if (item.type == 'softbreak') p = "&lt;br>&lt;/br>"
+				else if (item.type == 'footnote_anchor')
+					p = `&lt;a id="footnote-anchor-${item.meta.id}" href="#footnote-ref-${item.meta.id}"> back &lt;/a>`
+				else if (item.type == 'footnote_ref')
+					p = `&lt;a href="#footnote-anchor-${item.meta.id}"  id="footnote-ref-${item.meta.id}"> [${item.meta.label}] &lt;/a>`
+				else if (item.type == 'fence') p = codeblock(item)
+				else p = item.content;
+
 				ret.push(p);
 			} else {
 				let children = await eat(item.children);
@@ -113,6 +123,18 @@ setHookFor("**/*.md", {
 	}
 })
 
+setHookFor("pages/publication_engine.md", {
+	condition: (item, child) => {
+		if (item.tag == 'a') {
+			return false
+		}
+		else false
+	},
+	element: (item, child) => {
+		let removed = child.replace("date: ", "")
+		return `&lt;${item.tag} class='date'> ${removed} &lt;/${item.tag}>`
+	}
+})
 
 
 setHookFor("pages/wrapping_2025.md", {
@@ -206,13 +228,13 @@ for (const path of files) {
 	if (path.includes('markdown-it')) continue
 
 	Object.entries(hookMap).forEach(([glob, hooks]) => {
-		if (minimatch(path, glob)){
+		if (minimatch(path, glob)) {
 			hooks.forEach(e => beforeElementHooks.push(e))
 		}
 	})
 
 	Object.entries(styleMap).forEach(([glob, styleList]) => {
-		if (minimatch(path, glob)){
+		if (minimatch(path, glob)) {
 			styleList.forEach(e => styles.push(e))
 		}
 	})
