--- a/compile.js.html
+++ b/compile.js.html
@@ -50,8 +50,6 @@ async function eat(tree) {
 	while (tree.length > 0) {
 		let item = tree.shift();
 		if (item.nesting === 1) {
-			// console.log(item.type)
-			if (item.type.includes('foot')) console.log("BROOOO", item)
 			let at = attrs(item);
 			let ignore = false;
 
@@ -85,9 +83,6 @@ async function eat(tree) {
 		}
 
 		if (item.nesting === 0) {
-			// console.log(item.type)
-			if (item.type?.includes('foot')) console.log("BROOOOSEE", item)
-			// if (item.content && !item.children && item.content.includes('^')) console.log(item)
 			if (!item.children || item.children.length === 0) {
 				let p
 				if (item.type == 'softbreak') p = "&lt;br>&lt;/br>"
@@ -112,7 +107,6 @@ async function eat(tree) {
 }
 
 setHookFor(["*", "*/*"], arena)
-
 setHookFor("**/*.md", {
 	condition: (item, child) => {
 		return item.tag == 'p' && child.split(" ")[0] == 'insert:'
@@ -120,6 +114,16 @@ setHookFor("**/*.md", {
 	element: (item, child) => {
 		let removed = child.replace("insert: ", "")
 		return `&lt;${item.tag} class='insert'> ${removed} &lt;/${item.tag}>`
+	}
+})
+
+setHookFor("**/*.md", {
+	condition: (item, child) => {
+		return item.tag == 'p' && child.split(" ")[0] == 'caption:'
+	},
+	element: (item, child) => {
+		let removed = child.replace("caption: ", "")
+		return `&lt;${item.tag} class='caption'> ${removed} &lt;/${item.tag}>`
 	}
 })
 
@@ -135,7 +139,6 @@ setHookFor("pages/publication_engine.md", {
 		return `&lt;${item.tag} class='date'> ${removed} &lt;/${item.tag}>`
 	}
 })
-
 
 setHookFor("pages/wrapping_2025.md", {
 	condition: (item, child) => {
