--- a/extensions/arena.js.html
+++ b/extensions/arena.js.html
@@ -6,7 +6,7 @@
 	
 </head> 
 <body>
-	<pre>import {transform, attrs} from "../compile.js"
+	<pre>import { transform, attrs } from "../compile.js"
 
 let host = "http://localhost:3000/api";
 let auth = ''
@@ -55,11 +55,12 @@ const get_channel = (slug) => {
 	return fetch_json(host + "/channels/" + slug, options)
 }
 const get_block = (id) => fetch_json(host + "/blocks/" + id, options);
+
 export default {
 	condition: (item, child) => {
 		return item.tag == 'a' &&
 			(attrs(item).href.includes('are.na/block')
-			 || attrs(item).href.includes('feed.a-p.space/blocks')
+				|| attrs(item).href.includes('feed.a-p.space/blocks')
 			)
 	},
 	element: async (item, child) => {
@@ -94,7 +95,7 @@ export default {
 			let transformed = await transform(block.content)
 			if (child.trim().toLowerCase() == 'clip') return `&lt;div class='clip'>
 &lt;a href='https://feed.a-p.space/' target="_blank">From [ FEED.A-P ]&lt;/a>
-${transformed.slice(0,4).join("\n")}
+${transformed.slice(0, 4).join("\n")}
 
 &lt;a href='https://feed.a-p.space/blocks/${block.id}' target="_blank">
 Read More
